--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   hive_flutter: ^0.2.1
   # For OS-specific directory paths
   path_provider: ^1.3.0
+  bloc: ^1.0.0
+  flutter_bloc: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
